# Teukhos

./: .gitignore  AGENTS.md  CHANGELOG.md  MCPForge-TODO-v0.1.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: archive-tools.yaml  database-tools.yaml  dev-tools.yaml  docker-tools.yaml  git-tools.yaml  gpu-tools.yaml  image-tools.yaml  kubernetes-tools.yaml  media-tools.yaml  network-tools.yaml  remote-server.yaml
mcpforge/: __init__.py  cli.py  config.py  engine.py  output.py
mcpforge/adapters/: __init__.py  base.py  cli.py
scripts/: .http-servers.pids  install-tools.ps1  install-tools.sh  start-http-servers.ps1  start-http-servers.sh  stop-http-servers.ps1  stop-http-servers.sh
tests/: test_all_servers.py  test_auth.py  test_cli_adapter.py  test_config.py  test_discover.py  test_engine.py  test_installers.py  test_integration.py  test_output.py
teukhos/: __init__.py  auth.py  cli.py  config.py  discover.py  engine.py
teukhos/installers/: __init__.py  auggie.py  base.py  cline.py  codebuddy.py  codex.py  continue_dev.py  cursor.py  gemini_cli.py  github_copilot.py  kiro.py  opencode.py  roo_code.py  trae.py  windsurf.py
